--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -26,7 +26,7 @@ body {
     &--start-day--#{$day} {
       .calendar__day:first-child {
         margin-left: calc(
-          $width-calendar-day * ($num-column - 1) + ($num-column - 1px)
+          $width-calendar-day * ($num-column - 1) + calc(($num-column - 1px))
         );
       }
     }
