added gap variable

--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,5 +1,6 @@
 $block-side: 100px;
-$block-side-with-gap: $block-side + 1px;
+$gap: 1px;
+$block-side-with-gap: $block-side + $gap;
 $days: (
   'mon': 0,
   'tue': 1,
