--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,8 +1,8 @@
 .calendar {
   display: flex;
-  gap: 1px;
+  gap: $gap;
   flex-wrap: wrap;
-  max-width: $block-side-with-gap * 7;
+  max-width: $block-side * 7 + $gap * 6;
   padding: 10px;
 
   &__day {
