--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,33 +1,32 @@
-$height-calendar-day: 100px;
-$width-calendar-day: 100px;
-$colum-count: 7;
-$month-length: 31;
-$day-of-week: (
-  'mon': 1,
-  'tue': 2,
-  'wed': 3,
-  'thu': 4,
-  'fri': 5,
-  'sat': 6,
-  'sun': 7,
-);
+@import './variebles';
 
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   margin: 0;
 }
 
 .calendar {
   display: flex;
   flex-wrap: wrap;
+  margin: auto;
   width: $width-calendar-day * $colum-count + 10px;
   gap: 1px;
 
-  @each $day, $num-column in $day-of-week {
-    &--start-day--#{$day} {
+  @each $day, $num in $day-of-week {
+    &--start-day-#{$day} {
       .calendar__day:first-child {
-        margin-left: calc(
-          $width-calendar-day * ($num-column - 1) + calc(($num-column - 1px))
-        );
+        margin-left: $width-calendar-day * $num + $num;
+      }
+    }
+  }
+
+  @for $day-count from 28 to 31 {
+    &--month-length-#{$day-count} {
+      .calendar__day:nth-child(n + #{$day-count + 1}) {
+        display: none;
       }
     }
   }
@@ -40,24 +39,22 @@ body {
     justify-content: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
+    box-sizing: border-box;
 
-    @for $num-day from 1 to $month-length + 1 {
-      &:nth-child(#{$num-day}) {
-        border: 1px solid black;
-        box-sizing: border-box;
-        background-color: #eee;
+    border: 1px solid black;
+    background-color: #eee;
 
-        &::before {
-          content: '#{$num-day}';
-        }
+    @for $day from 1 through 31 {
+      &:nth-child(#{$day})::before {
+        content: '#{$day}';
       }
+    }
 
-      &:hover {
-        cursor: pointer;
-        background-color: #ffbfcb;
-        transition-duration: 0.5s;
-        transform: translateY(-20px);
-      }
+    &:hover {
+      cursor: pointer;
+      background-color: #ffbfcb;
+      transition-duration: 0.5s;
+      transform: translateY(-20px);
     }
   }
 }
