--- a/src/styles/blocks/variables.scss
+++ b/src/styles/blocks/variables.scss
@@ -2,3 +2,4 @@ $cell-size: 100px;
 $font-size: 30px;
 $gap: 1px;
 $padding: 10px;
+$days-week: (1 'mon', 2 'tue', 3 'wed', 4 'thu', 5 'fri', 6 'sat', 7 'sun');
