--- a/src/styles/utils/mod-r.scss
+++ b/src/styles/utils/mod-r.scss
@@ -10,22 +10,19 @@ $hover-color: #ffbfcb;
   }
 }
 
-@each $day in mon, tue, wed, thu, fri, sat, sun {
+$weekDays: (
+  'mon': 0,
+  'tue': 1,
+  'wed': 2,
+  'thu': 3,
+  'fri': 4,
+  'sat': 5,
+  'sun': 6,
+);
+
+@each $day, $num in $weekDays {
   .calendar--start-day-#{$day} .calendar__day:first-child {
-    margin-left: if(
-        $day == mon,
-        0,
-        if(
-          $day == tue,
-          1,
-          if(
-            $day == wed,
-            2,
-            if($day == thu, 3, if($day == fri, 4, if($day == sat, 5, 6)))
-          )
-        )
-      ) *
-      ($day-size + 2.7px);
+    margin-left: $num * ($day-size + 2.7px);
   }
 }
 
