hotfix background color of calendar__day

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,6 +17,7 @@
     display: flex;
     width: 100px;
     height: 100px;
+    background-color: $color-background;
     border: 1px solid $line-color;
     justify-content: center;
     align-items: center;
