--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,10 @@ $hover-bg-color: #ffbfcb;
 $font-size: 30px;
 $font-family: Arial, sans-serif;
 
+body {
+  margin: 0;
+}
+
 .container {
   display: flex;
   height: 100vh;
