--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,6 +15,14 @@
   flex-wrap: wrap;
   gap: $days-gap;
 
+  @for $day from 28 through 31 {
+    &--month-length-#{$day} {
+      .calendar__day:nth-child(n + #{$day + 1}) {
+        display: none;
+      }
+    }
+  }
+
   &__day {
     width: $box-size;
     height: $box-size;
@@ -31,14 +39,6 @@
         font:
           300 30px Arial,
           sans-serif;
-      }
-    }
-
-    @for $day from 28 through 31 {
-      .calendar--month-length-#{$day} {
-        .calendar__day:nth-child(n + #{$day + 1}) {
-          display: none;
-        }
       }
     }
 
