--- a/src/styles/block/main.scss
+++ b/src/styles/block/main.scss
@@ -20,7 +20,7 @@
     transition: 0.5s;
 
     &:hover {
-      background-color: #FFBFCB;
+      background-color: #ffbfcb;
       transform: translateY(-20px);
     }
 
