--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,4 +1,11 @@
 $day-size: 100px;
 $gap: 1px;
 $shift-size: 10px;
-$day-week: 'monday' 1,'tuesday' 2,'wednesday' 3,'thursday' 4,'friday' 5,'saturday' 6,'sunday' 7;
+$day-week:
+  'monday' 1,
+  'tuesday' 2,
+  'wednesday' 3,
+  'thursday' 4,
+  'friday' 5,
+  'saturday' 6,
+  'sunday' 7;
