--- a/src/styles/utils/variable.scss
+++ b/src/styles/utils/variable.scss
@@ -1,5 +1,5 @@
 $days: 31;
 $size-day: 100px;
 $gap-for-day: 1px;
-$width-calendar: calc((7 * (#{$size-day})) + 7 * #{$gap-for-day});
-$week-days: ('mon' 1, 'tue' 2, 'wed' 3, 'thu' 4, 'fri' 5, 'sat' 6, 'sun' 7);
+$width-calendar: calc(7 * (#{$size-day} + #{$gap-for-day}) - 1px);
+$week-days: ('mon' 0, 'tue' 1, 'wed' 2, 'thu' 3, 'fri' 4, 'sat' 5, 'sun' 6);
