--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,7 +4,7 @@ $day-border: 1px;
 $day-size: 100px;
 $day-color: #eee;
 $hover-color: #FFBFCB;
-$animation-duration: 0.5ms;
+$animation-duration: 0.5s;
 $days-gap: 10px;
 $week-days: "mon" 0,
 "tue" 1,
@@ -46,7 +46,7 @@ position: relative;
 display: flex;
 align-items: center;
 justify-content: center;
-cursor: pointer;
+cursor: grabbing;
 transition: transform $animation-duration, background-color $animation-duration;
 }
 
