--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,6 +18,11 @@ body {
   height: 100vh;
 }
 
+
+* {
+  box-sizing: border-box;
+}
+
 .calendar {
   display: flex;
   flex-wrap: wrap;
@@ -58,7 +63,7 @@ body {
   }
 
   @for $i from 28 through 31 {
-    &.month--length-#{$i} &__day:nth-child(n + #{$i + 1}) {
+    &--month-length-#{$i} &__day:nth-child(n + #{$i + 1}) {
       display: none;
     }
   }
