--- a/src/styles/calendar-bloc.scss
+++ b/src/styles/calendar-bloc.scss
@@ -31,7 +31,7 @@ body {
     }
 
     @for $i from 1 through 31 {
-      &--d-#{$i}::before {
+      &:nth-child(#{$i})::before {
         content: '#{$i}';
         font-size: $fontSize;
         font-family: $fontFam;
