add task solution 2

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,6 +6,7 @@ $blockHeight: 100px;
 $paddingWidth: 10px;
 
 body {
+  margin: 0;
   box-sizing: border-box;
   justify-content: center;
   align-items: center;
