--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -9,3 +9,9 @@ $day-week:
   'friday' 5,
   'saturday' 6,
   'sunday' 7;
+
+@mixin start-day($day, $margin-left) {
+  .calendar--start-day-#{$day} .calendar__day:first-child {
+    margin-left: #{$margin-left}px;
+  }
+}
