--- a/src/styles/block/main.scss
+++ b/src/styles/block/main.scss
@@ -1,45 +1,62 @@
-.calendar {
+* {
+  box-sizing: border-box;
+}
+
+body {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  font-family: Arial, sans-serif;
+  font-size: 30px;
   display: flex;
+}
+
+.calendar {
   flex-wrap: wrap;
-  width: width();
   gap: $gap;
-  padding: $shift-size;
-  margin: 0 auto;
+  width: 726px;
+  padding: 10px;
+  display: flex;
+}
 
-  &__day {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: $day-size;
-    height: $day-size;
-    border: 1px solid #000;
-    background-color: #eee;
-    font-size: 30px;
-    font-family: Arial, Helvetica, sans-serif;
-    cursor: pointer;
-    transition: 0.5s;
+$days-of-week: (mon, tue, wed, thu, fri, sat, sun);
 
-    &:hover {
-      background-color: #ffbfcb;
-      transform: translateY(-20px);
-    }
-
-    @for $day from 1 through 31 {
-      &:nth-child(#{$day})::before {
-        content: '#{$day}';
-      }
-    }
+@for $i from 1 through length($days-of-week) {
+  $day: nth($days-of-week, $i);
+  .calendar--start-day-#{$day} .calendar__day:first-child {
+    margin-left: #{($i - 1) * 101}px;
   }
+}
 
-  @each $day, $num in $day-week {
-    &--start-day--#{$day} &__day:first-child {
-      margin-left: mg-lft-frs-day($num);
-    }
-  }
+.calendar--month-length-28 .calendar__day:nth-child(n + 29),
+.calendar--month-length-29 .calendar__day:nth-child(n + 30),
+.calendar--month-length-30 .calendar__day:nth-child(n + 31),
+.calendar--month-length-31 .calendar__day:nth-child(n + 32) {
+  display: none;
+}
 
-  @for $day from 28 through 31 {
-    &--month-length--#{$day} &__day::nth-child(n + #{$day + 1}) {
-      display: none;
-    }
+.calendar__day {
+  background-color: #eee;
+  border: 1px solid #000;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+  transition-duration: 0.5s;
+  display: flex;
+}
+
+@for $i from 1 through 31 {
+  .calendar__day:nth-child(#{$i}):before {
+    content: '#{$i}';
   }
+}
+
+.calendar__day:hover {
+  cursor: pointer;
+  background-color: #ffbfcb;
+  transition-duration: 0.5s;
+  transform: translateY(-20px);
 }
