--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,70 @@
+@for $i from 1 through 31 {
+  .calendar__day:nth-child(#{$i})::before {
+    content: '#{$i}';
+    font-size: 30px;
+    margin: auto;
+  }
+}
+
+html {
+  font-family: Arial, sans-serif;
+}
+
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+}
+
+.container {
+  height: fit-content;
+}
+
+.calendar {
+  display: flex;
+  width: 700px + 6px;
+  height: fit-content;
+  flex-wrap: wrap;
+  gap: 1px;
+
+  &__day {
+    display: flex;
+    width: 100px;
+    height: 100px;
+    border: 1px solid black;
+    box-sizing: border-box;
+    background-color: #eee;
+    transition: transform 0.5s;
+  }
+
+  &__day:hover {
+    cursor: pointer;
+    transform: translate(0, -20px);
+  }
+}
+
+$days: (
+  'mon': 0,
+  'tue': 101px,
+  'wed': 202px,
+  'thu': 303px,
+  'fri': 404px,
+  'sat': 505px,
+  'sun': 606px,
+);
+
+@each $name, $day in $days {
+  .calendar--start-day-#{$name} .calendar__day:first-child {
+    margin-left: $day;
+  }
+}
+
+@for $j from 28 through 31 {
+  .calendar--month-length-#{$j} .calendar__day:nth-child(n + #{$j + 1}) {
+    visibility: hidden;
+    display: none;
+  }
 }
