--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -63,17 +63,17 @@ body {
   }
 
   @each $day, $index_day in $days_of_week {
-    &--start-day--#{$day} > &__day:first-child {
+    &--start-day-#{$day} > &__day:first-child {
       margin-left: ($index_day * $calendar_info + (1 * $index_day));
     }
   }
 
   @for $length from 28 through 31 {
-    &--month-length--#{$length} &__day {
+    &--month-length-#{$length} &__day {
       display: none;
     }
 
-    &--month-length--#{$length} &__day:nth-child(-n + #{$length}) {
+    &--month-length-#{$length} &__day:nth-child(-n + #{$length}) {
       display: block;
     }
   }
