--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,87 @@
+$colums: 7;
+$box-size: 100px;
+$days: (
+  0: 'mon',
+  1: 'tue',
+  2: 'wed',
+  3: 'thu',
+  4: 'fri',
+  5: 'sat',
+  6: 'sun',
+);
+
 body {
   margin: 0;
+  height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+  max-width: $box-size * $colums + 20;
+}
+
+.calendar__day {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: $box-size;
+  height: $box-size;
+  padding: 10px;
+  border: 1px solid #000;
+  background-color: #eee;
+  cursor: pointer;
+  animation-name: move;
+  transition: 500ms;
+  transition-property: all;
+}
+
+.calendar__day:hover {
+  transform: translateY(-20px);
+  background-color: #ffbfcb;
+}
+
+.calendar__day:first-child {
+  margin-left: ($colums - 1) * $box-size;
+}
+
+@keyframes move {
+  from {
+    top: 0;
+  }
+  to {
+    top: 20px;
+  }
+}
+
+@for $i from 1 through 31 {
+  .calendar:nth-child(31n + #{$i}) {
+    .calendar::before {
+      content: '#{$i}';
+    }
+  }
+}
+
+@each $i, $day in $days {
+  .calendar--start-day--#{$day} {
+    .calendar:first-child {
+      margin-left: $i * $box-size + 10;
+    }
+  }
+}
+
+@for $day from 28 through 31 {
+  .calendar--month-length-#{$day} {
+    .calendar__day:nth-child(n + #{$day + 1}) {
+      display: none;
+    }
+  }
 }
