add changes calendar

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,4 @@
-$colums: 7;
-$box-size: 100px;
-$days-gap: 1px;
-$days: (mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6);
+@import './variables';
 
 body {
   margin: 0;
@@ -44,7 +41,7 @@ body {
 
 @for $i from 1 through 31 {
   .calendar__day:nth-child(#{$i})::before {
-    content: '' + #{$i};
+    content: ' #{$i} ';
     position: absolute;
   }
 }
