add days calendar

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,7 +17,7 @@ body {
   align-items: center;
   flex-wrap: wrap;
   gap: $days-gap;
-  max-width: $box-size * $colums + 20;
+  max-width: $box-size * $colums + $days-gap * 7;
 }
 
 .calendar__day {
