--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,7 +6,7 @@ body {
     margin: 0;
     padding: 0;
     list-style: none;
-    font-family: Arial, sans-serif;
+    font-family: $day-font-family;
     font-size: 30px;
     width: auto;
   }
@@ -28,7 +28,7 @@ body {
     background-color: $day-color;
     width: $day-size;
     height: $day-size;
-    border: 1px solid #000;
+    border: 1px solid $day-border-color;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -44,14 +44,10 @@ body {
     }
   }
 
-  &--month-length-28 .calendar__day:nth-child(n + 29) {
-    display: none;
-  }
-  &--month-length-29 .calendar__day:nth-child(n + 30) {
-    display: none;
-  }
-  &--month-length-30 .calendar__day:nth-child(n + 31) {
-    display: none;
+  @for $i from 29 through 31 {
+    &--month-length-#{$i} .calendar__day:nth-child(n + #{$i + 1}) {
+      display: none;
+    }
   }
 }
 
