add finish solution

--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,7 +1,7 @@
 $box-size: 100px;
 $calendar-gap: 1px;
 $padding: 10px;
-$calendar-width: 7 * $box-size + 6 * $calendar-gap + 2 * $padding;
+$calendar-width: 7 * $box-size + 6 * $calendar-gap;
 $start-day: (
   'mon': 0,
   'tue': 1,
