--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,9 +13,11 @@ body {
   flex-wrap: wrap;
   gap: 1px;
   width: $calendar-width;
+  padding-inline: 10px;
 }
 
 .calendar__day {
+  display: flex;
   box-sizing: border-box;
   background-color: #eee;
   height: $box-size;
@@ -25,8 +27,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
 
-  text-align: center;
-  align-content: center;
+  justify-content: center;
+  align-items: center;
 
   transition-duration: 0.5s;
 }
