--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,15 +1,11 @@
+@import 'variables';
+
 @font-face {
   font-family: 'Arial Regular';
   font-style: normal;
   font-weight: normal;
   src: url '../fonts/ARIAL.woff';
 }
-
-// variables
-$size-calendar-box: 100px;
-$gap: 1px;
-$padding: 10px;
-$width-calendar: $size-calendar-box * 7 + $gap * 6 + $padding * 2;
 
 body {
   display: flex;
@@ -26,6 +22,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   width: $width-calendar;
+  margin: 0;
   padding: $padding;
   gap: $gap;
   box-sizing: border-box;
@@ -36,8 +33,10 @@ body {
     align-items: center;
     height: $size-calendar-box;
     width: $size-calendar-box;
+    list-style: none;
     box-sizing: border-box;
-    background-color: #eee;
+
+    background-color: $bg-color;
     border: 1px solid #000;
     transition-duration: 0.5s;
 
@@ -49,7 +48,7 @@ body {
 
     &:hover {
       cursor: pointer;
-      background-color: #ffbfcb;
+      background-color: $bg-color-hover;
       transform: translateY(-20px);
       transition-duration: 0.5s;
     }
