--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,9 @@
 @import './utils/var';
 
+* {
+  box-sizing: border-box;
+}
+
 html {
   font-family: Arial, sans-serif;
   font-size: 30px;
@@ -19,13 +23,13 @@ body {
   display: flex;
   flex-wrap: wrap;
   width: 707px;
-  
+
+
   &__day {
     margin: 1px;
-    box-sizing: border-box;
     background-color: #eee;
-    height: 99px;
-    width: 99px;
+    height: 100px;
+    width: 100px;
     border: 1px solid;
     justify-content: center;
     align-items: center;
