--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,51 +22,47 @@ body {
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  width: 707px;
-
+  width: $width-calendar;
+  gap: $gapSize;
+  margin: 0;
 
   &__day {
-    margin: 1px;
     background-color: #eee;
-    height: 100px;
-    width: 100px;
-    border: 1px solid;
+    height: $cellSize;
+    width: $cellSize;
+    border: 1px solid #000;
     justify-content: center;
     align-items: center;
+    list-style: none;
     display: flex;
-    cursor: pointer;
-    transition: transform 500ms;
+    transition-duration: 0.5s;
+
     &:hover {
       background-color: #ffbfcb;
       transform: translateY(-20px);
+      cursor: pointer;
+    }
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: '#{$i}';
+      }
     }
   }
 
-  &__day:first-child {
-    margin-left: 606px;
-  }
-
-
   @each $name, $margin in $days_of_week {
-    &__day---start-day-#{$name} {
+    &--start-day-#{$name} {
       & :first-child {
         margin-left: ($cellSize + $gapSize) * $margin;
       }
     }
   }
 
-    @for $i from 1 through 31 {
-      &__day:nth-child(#{$i})::before {
-        content: '#{$i}';
-      }
-    }
-  }
-
   @for $name from 28 through 31 {
-    .calendar--month-length-#{$name} {
+    &--month-length-#{$name} {
       .calendar__day:nth-child(n + #{$name + 1}) {
         display: none;
       }
     }
   }
-
+}
