--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -40,7 +40,7 @@
     }
 
     &:hover {
-      transform: translateY(0, -20px);
+      transform: translateY(-20px);
       background-color: #ffbfcb;
     }
   }
