--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,45 @@
+$day-size: 50px;
+$main:#eee;
+$border: #000;
+$day-gap: 1px;
+$calendar-padding: 10px;
+$calendar-width: (7 * $day-size) + (6 * $day-gap) + (2 * $calendar-padding);
+
+html {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+
 body {
   margin: 0;
+}
+
+.calendar {
+  margin: 0;
+  padding: $calendar-padding;
+
+  list-style: none;
+
+  display: flex;
+  gap: $day-gap;
+  flex-wrap: wrap;
+
+  width: $calendar-width;
+
+  &__day {
+    box-sizing: border-box;
+    width: $day-size;
+    height: $day-size;
+    background-color: $main;
+    border: 1px solid $border;
+
+    @for $date from 1 through 31 {
+      &:nth-child(#{$date})::before {
+        display: block;
+
+        content: $date;
+      }
+    }
+  }
+
 }
