--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,9 @@
 $widthDay: 100px;
-$widthCalendar: 7 * $widthDay + 6 * 1;
 $daysMonth: 31;
 $startDay: sun;
 $retreat: 1px;
+$calendarPadding: 10px;
+$widthCalendar: 7 * $widthDay + 6 * 1 + $calendarPadding * 2;
 $daysWeek: (
   tue: 1,
   wed: 2,
@@ -32,7 +33,7 @@ body {
   flex-wrap: wrap;
   gap: 1px;
   width: $widthCalendar;
-  margin: 0 10px;
+  padding: 0 10px;
 
   @for $daysOfMonth from 28 through $daysMonth {
     &--month-length-#{$daysOfMonth} &__day:nth-child(n + #{$daysOfMonth + 1}) {
@@ -57,10 +58,6 @@ body {
       transform: translateY(-20px);
       background-color: #ffbfcb;
       cursor: pointer;
-    }
-
-    &:nth-child(n + #{$daysMonth + 1}) {
-      display: none;
     }
 
     @for $num from 1 through $daysMonth {
