--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -29,6 +29,13 @@
     border: $cell-border-thickness solid $cell-border-color;
     text-align: center;
     line-height: $cell-size - $cell-border-thickness * 2;
+    transition-duration: 500ms;
+
+    &:hover {
+      cursor: pointer;
+      background-color: $cell-color-hover;
+      transform: translateY(-20px);
+    }
 
     @for $day from 1 through 31 {
       &--day--#{$day}:before {
