--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -7,7 +7,7 @@
 
   @each $name, $num in $week-days {
     &--start-day-#{$name} {
-      .calendar__cell--day--1 {
+      .calendar__day--1 {
         margin-left: ($num - 1) * $cell-size + ($num - 1) * $cell-gap;
       }
     }
@@ -21,7 +21,7 @@
     }
   }
 
-  &__cell {
+  &__day {
     box-sizing: border-box;
     width: $cell-size;
     height: $cell-size;
@@ -38,7 +38,7 @@
     }
 
     @for $day from 1 through 31 {
-      &--day--#{$day}:before {
+      &--#{$day}:before {
         content: '#{$day}';
       }
     }
