--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -44,7 +44,7 @@ $days: (
 
   @for $days-in-month from 28 to 31 {
     &--month-length-#{$days-in-month} :nth-child(n + #{$days-in-month + 1}) {
-      visibility: hidden;
+      display: none;
     }
   }
 }
