add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -42,7 +42,7 @@ html {
     &:hover {
       cursor: pointer;
       background-color: $pink;
-      transform: translate(0 -20px);
+      transform: translateY(-20px);
     }
 
     &::before {
