add changes according to the pull request commentary

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -26,13 +26,7 @@ $days: (
 
   @for $date from 1 through 31 {
     & :nth-child(#{$date})::before {
-      font-family: Arial, sans-serif;
-      font-size: 30px;
-      position: absolute;
       content: '#{$date}';
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
     }
   }
 
@@ -56,6 +50,11 @@ $days: (
   border: 1px solid black;
   box-sizing: border-box;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Arial, sans-serif;
+  font-size: 30px;
   transition:
     transform 500ms,
     background-color 500ms;
