add transition property

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -13,6 +13,7 @@
     border: $cell-border-thickness solid $cell-border-color;
     text-align: center;
     line-height: $cell-size - $cell-border-thickness * 2;
+    transition-property: background-color, transform;
     transition-duration: 500ms;
 
     &:hover {
